<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cc"
    android:padding="16dp">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />
    <EditText
        android:id="@+id/editTextHrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_hours" />

    <Spinner
        android:id="@+id/spinnerGenres"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editTextHrs"
        android:entries="@array/Dept"/>

    <Spinner
        android:id="@+id/spinnerSub"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editTextHrs"
        android:entries="@array/Third_sub"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonDeleteArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>